--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase-admin": "^12.0.0",
     "next": "15.3.4"
   },
   "devDependencies": {
